# pv-bess-optimizer

./: .gitignore  .readthedocs.yaml  AUDIT_REPORT.md  CITATION.cff  CONTRIBUTING.md  LICENSE  PV_15min_Universal.xlsx  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
audit_artifacts/: A_workbook_full_values.txt  A_workbook_inventory.txt  B5a_B6a_solve.json  B5a_B6a_solve.out  B5a_B6a_solve.py  B5c_financial_kpi_check.out  B5c_financial_kpi_check.py  C2_unlimited_grid_export.out  C2_unlimited_grid_export.py  D_window_timing.out  D_window_timing.py
data/: README.md  pv_shape_15min.csv
docs/: AUDIT_REPORT.md  CHANGELOG.md  Makefile  README.md  audit_report.md  audit_report_phase1.md  audit_report_v0_9_0.md  audit_test_index.md  balancing_logic_verification.md  balancing_market_design.md  economics_design.md  independent_audit_v2_report.md  intraday_design.md  market_scenarios_design.md  merchant_design.md  ppa_design.md  production_readiness_report.md  self_consumption_design.md  self_consumption_logic_spec.md  uncertainty_design.md  v0.6.1_triage_notes.md  v0.6_changelog.md  v0.8.3_changelog.md  v0.8.3_visual_audit_log.md  v0.8_changelog.md
docs/notes/: market_data_spike.md
docs/source/: changelog.rst  conf.py  index.rst  license.rst
docs/source/api/: pvbess_opt.rst
docs/source/technical.documentation/: asset_modes.rst  energy-balance.rst  kpis.rst  lifetime_scaling.rst  mip_formulation.rst  model.rst  objectives.rst  regulatory_framework.rst  uncertainty_modelling.rst
docs/source/users.guide/: economics.rst  financial_plots.rst  inputs.rst  install.rst  intro.rst  output_layout.rst  outputs.rst  rolling_horizon.rst  running.rst  sensitivity.rst
docs/technical.documentation/: asset_modes.md  uncertainty_modelling.md
examples/: scenarios.yaml
inputs/: input.xlsx
pvbess_opt/: __init__.py  availability.py  balancing.py  cli.py  config.py  constants.py  conventions.md  curtailment.py  degradation.py  economics.py  emissions.py  intraday.py  io.py  io_read.py  io_style.py  kpis.py  lender.py  lifetime.py  max_injection.py  modes.py  optimization.py  pipeline.py  ppa.py  rolling_horizon.py  scenarios.py  sensitivity.py  sizing.py  theme.py  timeutils.py
pvbess_opt/marketdata/: __init__.py  admie.py  base.py  entsoe.py  henex.py
pvbess_opt/plotting/: __init__.py  _currency.py  _dates.py  balancing.py  bess_revenue.py  daily.py  degradation.py  emissions.py  financial.py  helpers.py  inputs_uncertainty.py  intraday.py  lifecycle.py  monthly.py  price_scenarios.py  scenarios.py  sizing.py  style.py  uncertainty.py  yearly.py
pvbess_opt/pricedata/: __init__.py  adapters.py  engine.py  ensemble.py  resolve.py  store.py
pvbess_opt/resource/: __init__.py  base.py  pvgis.py  resample.py
requirements/: base.txt  dev.txt  docs.txt  solvers.txt
scripts/: build_input_xlsx.py  export_readme_figures.py  polish_input_workbook.py  probe_market_data.py  resample_timeseries.py  update_workbook_balancing.py
scripts/audit_runs/: __init__.py  _common.py  run_all.sh  run_merchant_bess_only_off.py  run_merchant_bess_only_on.py  run_merchant_hybrid_off.py  run_merchant_hybrid_on.py  run_merchant_pv_only_off.py  run_phase2_visual_check.py  run_self_consumption_bess_only_off.py  run_self_consumption_bess_only_on.py  run_self_consumption_hybrid_off.py  run_self_consumption_hybrid_on.py  run_self_consumption_pv_only_off.py  run_visual_check_balancing_plots.py
scripts/audit_runs/results/: merchant_bess_only_off.json  merchant_bess_only_on.json  merchant_hybrid_off.json  merchant_hybrid_on.json  merchant_pv_only_off.json  self_consumption_bess_only_off.json  self_consumption_bess_only_on.json  self_consumption_hybrid_off.json  self_consumption_hybrid_on.json  self_consumption_pv_only_off.json
tests/: __init__.py  _balancing_helpers.py  _marketdata_helpers.py  _pv_helpers.py  conftest.py  test_annotation_safety.py  test_annual_cycle_cap.py  test_asset_modes.py  test_audit_correctness_sweep.py  test_augmentation.py  test_axis_contract_sweep.py  test_balancing_aggregator_fee.py  test_balancing_aggregator_fee_robustness.py  test_balancing_bess_only.py  test_balancing_block_structure.py  test_balancing_invariants.py  test_balancing_io.py  test_balancing_legend_labels.py  test_balancing_lifetime_cashflow.py  test_balancing_mc.py  test_balancing_mc_coupling.py  test_balancing_mode_contract.py  test_balancing_module.py  test_balancing_optimization.py  test_balancing_runtime_invariants.py  test_balancing_timeseries_warning.py  test_balancing_validator_resolved.py  test_bess_capex_basis.py  test_bess_degradation_cycle.py  test_bess_only_output_frame.py  test_bess_spec.py  test_bess_tolling.py  test_bess_utilization.py  test_capacity_market.py  test_color_registry.py  test_combined_with_soc.py  test_config_yaml.py  test_contract_foundations.py  test_contract_stacking_matrix.py  test_correctness_locks.py  (+175 more)
tests/fixtures/: kpi_baseline.json  kpi_v087_baseline.json
